feat: added javadoc and exceptions